--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -27,8 +27,10 @@ services:
     build:
       context: ../frontend
       dockerfile: Dockerfile
+    command: cp -r /app/build/. /static/
     volumes:
       - ../frontend/:/app/result_build/
+      - static:/frontend_static
     depends_on:
       - backend
   nginx:
