--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -19,16 +19,16 @@ server {
     proxy_pass http://backend:8000/api/;
   }
 
-  location /media/ {
-    root /var/html;
+  location /static/media/ {
+    root /staticfiles/;
   }
 
-  location /collected_static/admin/ {
-    root /app/;
+  location /static/admin/ {
+    root /staticfiles/;
   }
 
-  location /collected_static/rest_framework/ {
-    root /app/;
+  location /static/rest_framework/ {
+    root /staticfiles/;
   }
 
   location / {
