--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -20,7 +20,7 @@ server {
   }
 
   location /static/media/ {
-    root /staticfiles/;
+    root /staticfiles/recipes/;
   }
 
   location /static/admin/ {
