--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -19,8 +19,8 @@ server {
     proxy_pass http://backend:8000/api/;
   }
 
-  location /static/media/ {
-    root /staticfiles/recipes/;
+  location /media/ {
+    root /media/;
   }
 
   location /static/admin/ {
