--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -33,9 +33,9 @@ services:
     env_file: .env
     restart: always
     volumes:
-      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/:/usr/share/nginx/html/api/docs/
+      #- ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
+      #- ./frontend/build:/usr/share/nginx/html/
+      #- ./docs/:/usr/share/nginx/html/api/docs/
       - static_volume:/staticfiles/
       - media:/media/
     ports:
