--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,14 +28,14 @@ services:
       - ./frontend/:/app/result_build/
       - static_volume:/frontend_static
   nginx:
-    image: alex0942/foodgram-project-react_nginx
-    #image: nginx:1.19.3
+    #image: alex0942/foodgram-project-react_nginx
+    image: nginx:1.19.3
     env_file: .env
     restart: always
     volumes:
-      #- ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
-      #- ./frontend/build:/usr/share/nginx/html/
-      #- ./docs/:/usr/share/nginx/html/api/docs/
+      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/api/docs/
       - static_volume:/staticfiles/
       - media:/media/
     ports:
