--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,4 +7,4 @@ COPY . .
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "foodgram.wsgi"]
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod u+x /entrypoint.sh
-#ENTRYPOINT ["/app/entrypoint.sh"]
+ENTRYPOINT ["/app/entrypoint.sh"]
