--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -26,7 +26,7 @@ services:
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - ./frontend/:/app/result_build/
-    #  - static_volume:/frontend_static
+      - static_volume:/frontend_static
   nginx:
     #image: alex0942/foodgram-project-react_nginx
     image: nginx:1.22.1
@@ -34,7 +34,7 @@ services:
     restart: always
     volumes:
       - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/build/:/usr/share/nginx/html/
+      - ./frontend/build:/usr/share/nginx/html/
       - ./docs/:/usr/share/nginx/html/api/docs/
       - static_volume:/staticfiles/
       - media:/media/
