--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -32,7 +32,7 @@ server {
   }
 
   location / {
-    root /staticfiles;
+    root /staticfiles/;
     index  index.html index.htm;
     try_files $uri /index.html =404;
     proxy_set_header        Host $host;
