--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -31,11 +31,12 @@ server {
     root /staticfiles/;
   }
 
-  location / {
-    root /staticfiles/;
+  location /staticfiles/ {
+    alias /staticfiles/;
+    # root /staticfiles/;
     index  index.html index.htm;
-    #try_files $uri /index.html;
-    try_files $uri $uri/ /index.html;
+    try_files $uri /index.html;
+    # try_files $uri $uri/ /index.html;
     proxy_set_header        Host $host;
     proxy_set_header        X-Real-IP $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
