--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -31,9 +31,8 @@ server {
     root /staticfiles/;
   }
 
-  location /staticfiles/ {
-    alias /staticfiles/;
-    # root /staticfiles/;
+  location / {
+    root /staticfiles/;
     index  index.html index.htm;
     try_files $uri /index.html;
     # try_files $uri $uri/ /index.html;
