--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -34,7 +34,7 @@ services:
     restart: always
     volumes:
       - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/build/:/usr/share/nginx/html/
+      - ./frontend/build/:/staticfiles/
       - ./docs/:/usr/share/nginx/html/api/docs/
       - static_volume:/staticfiles/
       - media:/media/
