--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -32,8 +32,8 @@ server {
   }
 
   location / {
-    root /staticfiles/;
-    index  index.html index.htm;
+    alias /staticfiles/;
+    index  index.html;
     try_files $uri /index.html;
     # try_files $uri $uri/ /index.html;
     proxy_set_header        Host $host;
