--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -34,7 +34,7 @@ server {
   location / {
     alias /staticfiles/;
     index index.html;
-    try_files $uri /index.html;
+    # try_files $uri /index.html;
     # try_files $uri $uri/ /index.html;
     proxy_set_header        Host $host;
     proxy_set_header        X-Real-IP $remote_addr;
