--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -33,7 +33,8 @@ services:
     env_file: .env
     restart: always
     volumes:
-      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
+      # - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./infra/nginx.conf:/etc/nginx/templates/default.conf.template
       - ./frontend/build/:/staticfiles/
       - ./docs/:/usr/share/nginx/html/api/docs/
       - static_volume:/staticfiles/
