--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,7 +8,7 @@ server {
   }
 
   location /api/docs/ {
-    root /usr/share/nginx/html/api/docs/;
+    root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
 
@@ -32,9 +32,9 @@ server {
   }
 
   location / {
-    # alias /staticfiles/;
-    root /usr/share/nginx/html/;
-    index index.html;
+    alias /staticfiles/;
+    # root /usr/share/nginx/html/;
+    index index.html index.htm;
     try_files $uri /index.html;
     # try_files $uri $uri/ /index.html;
     proxy_set_header        Host $host;
