--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -34,8 +34,8 @@ services:
     # restart: always
     volumes:
       - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./infra/nginx.conf:/etc/nginx/templates/default.conf.template
-      - ./frontend/build/:/staticfiles/
+      # - ./infra/nginx.conf:/etc/nginx/templates/default.conf.template
+      # - ./frontend/build/:/staticfiles/
       - ./frontend/build/:/usr/share/nginx/html/
       - ./docs/:/usr/share/nginx/html/api/docs/
       - static_volume:/staticfiles/
