--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -29,14 +29,14 @@ services:
       - static_volume:/frontend_static
   nginx:
     #image: alex0942/foodgram-project-react_nginx
-    image: nginx:1.19.3
+    image: nginx:1.22.1
     env_file: .env
     # restart: always
     volumes:
       - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
       # - ./infra/nginx.conf:/etc/nginx/templates/default.conf.template
-      # - ./frontend/build/:/staticfiles/
-      - ./frontend/build/:/usr/share/nginx/html/
+      - ./frontend/build/:/staticfiles/
+      # - ./frontend/build/:/usr/share/nginx/html/
       - ./docs/:/usr/share/nginx/html/api/docs/
       - static_volume:/staticfiles/
       - media:/media/
