--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -32,8 +32,8 @@ server {
   }
 
   location / {
-    # alias /staticfiles/;
-    root /usr/share/nginx/html/;
+    alias /staticfiles/;
+    # root /usr/share/nginx/html/;
     index index.html index.htm;
     try_files $uri /index.html;
     # try_files $uri $uri/ /index.html;
