--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -33,7 +33,7 @@ server {
 
   location / {
     alias /staticfiles/;
-    index  index.html index.htm;
+    index  index.html;
     try_files $uri /index.html;
     # try_files $uri $uri/ /index.html;
     proxy_set_header        Host $host;
