--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,8 +28,8 @@ services:
       - ./frontend/:/app/result_build/
       - static_volume:/frontend_static
   nginx:
-    #image: alex0942/foodgram-project-react_nginx
-    image: nginx:1.22.1
+    image: alex0942/foodgram-project-react_nginx
+    # image: nginx:1.22.1
     env_file: .env
     restart: always
     volumes:
