--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -21,6 +21,8 @@ server {
 
   location /media/ {
     alias /media/;
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/media/;
   }
 
   location /static/admin/ {
